maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:25: error: Boolean does not take parameters
  if (!murGauche())
                ^